--- a/examples/vignette.ipynb
+++ b/examples/vignette.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from examples.instances import gaussian_instance\n",
-    "from src.carving_class import linear_carving"
+    "from src.random_lasso import linear_carving"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "7         -6.390008          1.304524  0.207138"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "7  0.879544         -2.159609          3.918697  0.570563"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,11 +309,173 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Approximate selective MLE \n",
+    "\n",
+    "Proposed by Panigrahi, S. and Taylor, J., 2022. Approximate selective inference via maximum likelihood. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MLE</th>\n",
+       "      <th>SE</th>\n",
+       "      <th>Zvalue</th>\n",
+       "      <th>pvalue</th>\n",
+       "      <th>alternative</th>\n",
+       "      <th>lower_confidence</th>\n",
+       "      <th>upper_confidence</th>\n",
+       "      <th>unbiased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.858867</td>\n",
+       "      <td>1.831669</td>\n",
+       "      <td>0.468899</td>\n",
+       "      <td>0.639142</td>\n",
+       "      <td>twosided</td>\n",
+       "      <td>-2.731138</td>\n",
+       "      <td>4.448873</td>\n",
+       "      <td>-2.058255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.786518</td>\n",
+       "      <td>1.359435</td>\n",
+       "      <td>-1.314162</td>\n",
+       "      <td>0.188792</td>\n",
+       "      <td>twosided</td>\n",
+       "      <td>-4.450961</td>\n",
+       "      <td>0.877926</td>\n",
+       "      <td>-2.902241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.153896</td>\n",
+       "      <td>1.723597</td>\n",
+       "      <td>0.089288</td>\n",
+       "      <td>0.928853</td>\n",
+       "      <td>twosided</td>\n",
+       "      <td>-3.224292</td>\n",
+       "      <td>3.532083</td>\n",
+       "      <td>1.886271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.937687</td>\n",
+       "      <td>1.959331</td>\n",
+       "      <td>0.988954</td>\n",
+       "      <td>0.322686</td>\n",
+       "      <td>twosided</td>\n",
+       "      <td>-1.902530</td>\n",
+       "      <td>5.777904</td>\n",
+       "      <td>-1.857477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.915748</td>\n",
+       "      <td>1.643329</td>\n",
+       "      <td>-0.557252</td>\n",
+       "      <td>0.577355</td>\n",
+       "      <td>twosided</td>\n",
+       "      <td>-4.136614</td>\n",
+       "      <td>2.305118</td>\n",
+       "      <td>-2.089321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-0.438684</td>\n",
+       "      <td>1.745124</td>\n",
+       "      <td>-0.251377</td>\n",
+       "      <td>0.801522</td>\n",
+       "      <td>twosided</td>\n",
+       "      <td>-3.859064</td>\n",
+       "      <td>2.981695</td>\n",
+       "      <td>-2.014187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-2.757213</td>\n",
+       "      <td>1.287738</td>\n",
+       "      <td>-2.141129</td>\n",
+       "      <td>0.032264</td>\n",
+       "      <td>twosided</td>\n",
+       "      <td>-5.281133</td>\n",
+       "      <td>-0.233293</td>\n",
+       "      <td>-2.426405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-2.425201</td>\n",
+       "      <td>1.968802</td>\n",
+       "      <td>-1.231816</td>\n",
+       "      <td>0.218018</td>\n",
+       "      <td>twosided</td>\n",
+       "      <td>-6.283982</td>\n",
+       "      <td>1.433580</td>\n",
+       "      <td>1.587003</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        MLE        SE    Zvalue    pvalue alternative  lower_confidence  \\\n",
+       "0  0.858867  1.831669  0.468899  0.639142    twosided         -2.731138   \n",
+       "1 -1.786518  1.359435 -1.314162  0.188792    twosided         -4.450961   \n",
+       "2  0.153896  1.723597  0.089288  0.928853    twosided         -3.224292   \n",
+       "3  1.937687  1.959331  0.988954  0.322686    twosided         -1.902530   \n",
+       "4 -0.915748  1.643329 -0.557252  0.577355    twosided         -4.136614   \n",
+       "5 -0.438684  1.745124 -0.251377  0.801522    twosided         -3.859064   \n",
+       "6 -2.757213  1.287738 -2.141129  0.032264    twosided         -5.281133   \n",
+       "7 -2.425201  1.968802 -1.231816  0.218018    twosided         -6.283982   \n",
+       "\n",
+       "   upper_confidence  unbiased  \n",
+       "0          4.448873 -2.058255  \n",
+       "1          0.877926 -2.902241  \n",
+       "2          3.532083  1.886271  \n",
+       "3          5.777904 -1.857477  \n",
+       "4          2.305118 -2.089321  \n",
+       "5          2.981695 -2.014187  \n",
+       "6         -0.233293 -2.426405  \n",
+       "7          1.433580  1.587003  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "carving.approx_mle_inference(sig_level=0.05)"
+   ]
   }
  ],
  "metadata": {
