--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -35,12 +35,12 @@
     "$$\n",
     "The conditional distribution of $\\hat\\theta\\mid Y$ is $N( m(Y), \\tau^2)$, where\n",
     "$$\n",
-    "m(Y)=\\theta + (Ac\\nu)^\\intercal (A(\\nu cc^\\intercal + \\Omega)A^\\intercal )^{-1}(Y - A(c\\theta+u) ),\\quad \\tau^2=\\nu - (Ac\\nu)^\\intercal (A(\\nu cc^\\intercal + \\Omega)A^\\intercal )^{-1} (Ac\\nu)\n",
+    "m(Y)=\\theta + (Ac\\nu)^\\intercal (A(\\nu cc^\\intercal + \\Omega)A^\\intercal )^{-1}(Y - A(c\\theta+u) ),\\quad \\tau^2=\\nu - (Ac\\nu)^\\intercal (A(\\nu cc^\\intercal + \\Omega)A^\\intercal )^{-1} (Ac\\nu).\n",
     "$$\n",
     "\n",
     "The CDF of $\\hat\\theta$ is\n",
     "$$\n",
-    "P(\\hat\\theta \\leq t) = \\frac{\\int_{Y\\leq b} \\Phi(\\frac{t-m}{\\tau}) \\varphi(Y; A(c\\theta+u), A(\\nu cc^\\intercal+\\Omega)A^\\intercal )   dY}{\\int_{Y\\leq b} \\varphi(Y; A(c\\theta+u), A(\\nu cc^\\intercal+\\Omega)A^\\intercal )   dY  }.\n",
+    "P(\\hat\\theta \\leq t) = \\frac{\\int_{Y\\leq b} \\Phi(\\frac{t-m(Y)}{\\tau}) \\varphi(Y; A(c\\theta+u), A(\\nu cc^\\intercal+\\Omega)A^\\intercal )   dY}{\\int_{Y\\leq b} \\varphi(Y; A(c\\theta+u), A(\\nu cc^\\intercal+\\Omega)A^\\intercal )   dY  }.\n",
     "$$\n",
     "\n",
     "The integrals in the numerator and denominator are evaluated by Monte Carlo.\n",
@@ -50,7 +50,7 @@
     "$$\n",
     "A two-sided p-value is obtained by $2 \\min(\\hat F(t), 1-\\hat F(t) )$.\n",
     "\n",
-    "Confidence intervals can be obtained by inverting the test. We do this by a bi-section method."
+    "Confidence intervals can be obtained by inverting the test. We do this using a bi-section method."
    ]
   },
   {
