--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -153,12 +153,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P-value for eta'mu = 0: 0.2082\n"
+      "P-value for eta'mu = 0: 0.1138\n"
      ]
     }
    ],
    "source": [
-    "pvalue = get_pvalue(0)\n",
+    "pvalue = get_pvalue(eta.dot(mu))\n",
     "print(\"P-value for eta'mu = 0:\", np.round(pvalue, 4))"
    ]
   },
@@ -206,7 +206,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:33<00:00,  3.02it/s]\n"
+      "100%|██████████| 100/100 [00:35<00:00,  2.82it/s]\n"
      ]
     }
    ],
